overflow on pagination fixed

--- a/webapp/finder/find/theme/styles/theme.css
+++ b/webapp/finder/find/theme/styles/theme.css
@@ -7769,7 +7769,7 @@ a.collectionlike {
 }
 
 .categorypathpicker {
-  height: calc(100% - 32px);
+  height: calc(100% - 36px);
   overflow-x: auto;
 }
 .categorypathpicker .pickcategorylink {
